Fix sidebar alignment

--- a/packages/edit-site/src/components/sidebar/style.scss
+++ b/packages/edit-site/src/components/sidebar/style.scss
@@ -1,5 +1,7 @@
 .edit-site-sidebar__content {
 	// Leave room for the site editor toggle.
 	margin-top: $header-height + $grid-unit-80;
-	padding: $grid-unit-10;
+
+	// This matches the logo padding
+	padding: $grid-unit-15;
 }
